source/frontend/src/block/FilterContent/FilterContentMenu/FilterContentMenuDropdown/FilterContentMenuDropdown.scss
:local {
	.filter-content-menu-dropdown {
		@include size(100%, $sizeGrid * 1.5);
		@include position($sizeGrid * 2, 0, 0, 0);
		background: $colorWhite;
		position: absolute;
		box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.08);
	}

	.wrapper {
		white-space: nowrap;
		overflow-y: auto;
		padding: 20px $sizeGrid;
	}

	.filters {
		height: 100%;
		vertical-align: middle;
		display: inline-block;
	}

	.filter {
		@extend %reset-bmp;
		@include size(auto, 2rem);
		border-radius: 2rem;
		outline: none;
		font: 600 1.2rem / 2rem $fontOpenSans;
		text-transform: uppercase;
		padding: 0 $sizeGrid / 4;
		cursor: pointer;
		color: $colorLightGrey;
		background-color: $colorQuaternary;

		&.is-active {
			background: $colorTertiary;
			color: $colorWhite;
		}

		&:not(:first-child) {
			margin-left: $sizeGridSecondary / 2;
		}
	}

	.close {
		@include position(50%, $sizeGrid / 2, auto, auto);
		position: absolute;
		transform: translateY(-50%);
	}

	@include respond-to(SMALL) {
		.filter-content-menu-dropdown {
			@include position(auto, auto, auto, auto);
			height: auto;
			position: relative;
			box-shadow: none;
		}

		.wrapper {
			padding-top: 5px;
			padding-bottom: 5px;
		}

		.filter {
			height: 4rem;
			font-size: mobile-size(2rem);
			line-height: 4rem;
		}

		.close {
			display: none;
		}
	}
}

